2006-04-30  Frank Ch. Eigler  <fche@elastic.org>

	PR 2610.
	* translate.cxx (c_unparser::visit_arrayindex, visit_stat_op):
	Detect empty aggregates consistently.
	(visit_print_format): Ditto.  Also detect errors due to
	argument evaluation.
	(translator_output::*): Add a flush before a failing assert,
	to produce more context when debugging.

2006-04-25  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am: Removed "rpm" target.
	* Makefile.in, aclocal.m4: Regenerated.

2006-04-25  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (typeresolution_info::unresolved,invalid,
	mismatch): Print current function/probe name in error message.
	(semantic_pass_types): Pass sufficient information.
	* elaborate.h: Corresponding changes.

2006-04-25  Frank Ch. Eigler  <fche@elastic.org>

	PR 2427.
	* staptree.cxx (varuse_collecting_visitor::visit_embeddedcode):
	Support /* pure */ declaration.  Stop using __tvar_ naming hack.
	(v_c_u::visit_print_format): Mark sprint and sprintf as
	side-effect-free.
	(deep_copy_visitor::visit_print_format): Propagate raw_components.
	* stap.1.in: Document declaration.
	* elaborate.cxx (semantic_pass_opt2): Verbose message tweak.
	(dead_stmtexpr_remover): Extend for more aggressive optimization.
	* tapsets.cxx (dwarf,mark_var_expanding_copy_visotor): Add
	/* pure */ declaration to rvalue expansions.  
	* tapset/*.stp: Added /* pure */ declarations to many functions.
	* testsuite/parseok/unparsers.stp: Propagate guru mode flag.
	* testsuite/buildok/twentyfour.stp: New test.

2006-04-24  Frank Ch. Eigler  <fche@elastic.org>

	PR 2599.
	* elaborate.cxx (visit_assignment): Tolerate null current_expr.
	* testsuite/semok/optimize.stp: Add relevant tests.

2006-04-23  Eugene Teo  <eteo@redhat.com>

	PR 2149
	* translate.cxx (mapvar::set): Test _stp_map_set_xx() for
	array overflows.

2006-04-23  Eugene Teo  <eteo@redhat.com>

	* small_demos/ansi_colors.stp: Add an example of using octal
	escape sequences to display all possible ansi colors.
