@@ -1,3 +1,8 @@
+2006-05-01  Frank Ch. Eigler  <fche@elastic.org>
+
+	* translate.cxx (visit_print_format): Fix regression in
+	"printf" pseudo-result initialization.
+
 2006-04-30  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR 2610.
